parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASSIGN
    SPACE

Grammar

Rule 0     S' -> program
Rule 1     program -> prinDecl program
Rule 2     program -> functionDecl program
Rule 3     program -> empty empty
Rule 4     prinDecl -> DEF PRIN LPARENT RPARENT LBRACKET statementList RBRACKET
Rule 5     functionDecl -> DEF ID LPARENT varList RPARENT LBRACKET statementList RBRACKET
Rule 6     statementList -> statement
Rule 7     statementList -> statementList statement
Rule 8     statement -> SET ID COMMA TRUE SEMICOLOM
Rule 9     statement -> SET ID COMMA FALSE SEMICOLOM
Rule 10    statement -> SET ID COMMA expression SEMICOLOM
Rule 11    statement -> EXEC ID LPARENT varList RPARENT SEMICOLOM
Rule 12    statement -> TYPE LPARENT ID RPARENT SEMICOLOM
Rule 13    statement -> IF conditionif LBRACKET statementList RBRACKET empty
Rule 14    statement -> IF conditionif LBRACKET statementList RBRACKET ELSE LBRACKET statementList RBRACKET
Rule 15    statement -> FOR ID TO expression STEP NUMBER_I LBRACKET statementList RBRACKET
Rule 16    statement -> FOR ID TO expression STEP empty LBRACKET statementList RBRACKET
Rule 17    statement -> EC inCaseLista SN LBRACKET statementList RBRACKET FEC SEMICOLOM
Rule 18    statement -> EC ID inCaseListb SN LBRACKET statementList RBRACKET FEC SEMICOLOM
Rule 19    statement -> SET ID DOT NEG SEMICOLOM
Rule 20    statement -> SET ID DOT T SEMICOLOM
Rule 21    statement -> SET ID DOT F SEMICOLOM
Rule 22    statement -> ABANICO LPARENT A RPARENT SEMICOLOM
Rule 23    statement -> ABANICO LPARENT B RPARENT SEMICOLOM
Rule 24    statement -> VERTICAL LPARENT D RPARENT SEMICOLOM
Rule 25    statement -> VERTICAL LPARENT I RPARENT SEMICOLOM
Rule 26    statement -> PERCUTOR LPARENT A empty RPARENT SEMICOLOM
Rule 27    statement -> PERCUTOR LPARENT B empty RPARENT SEMICOLOM
Rule 28    statement -> PERCUTOR LPARENT A B RPARENT SEMICOLOM
Rule 29    statement -> PERCUTOR LPARENT D empty RPARENT SEMICOLOM
Rule 30    statement -> PERCUTOR LPARENT I empty RPARENT SEMICOLOM
Rule 31    statement -> PERCUTOR LPARENT D I RPARENT SEMICOLOM
Rule 32    statement -> GOLPE LPARENT RPARENT SEMICOLOM
Rule 33    statement -> VIBRATO LPARENT NUMBER_I RPARENT SEMICOLOM
Rule 34    statement -> METRONOMO LPARENT A COMMA NUMBER_I RPARENT SEMICOLOM
Rule 35    statement -> METRONOMO LPARENT D COMMA NUMBER_I RPARENT SEMICOLOM
Rule 36    statement -> METRONOMO LPARENT A COMMA NUMBER_F RPARENT SEMICOLOM
Rule 37    statement -> METRONOMO LPARENT D COMMA NUMBER_F RPARENT SEMICOLOM
Rule 38    statement -> PRINT LPARENT printTextList RPARENT SEMICOLOM
Rule 39    printTextList -> printText
Rule 40    printTextList -> printTextList COMMA printText
Rule 41    printText -> expression
Rule 42    printText -> STRING
Rule 43    varList -> var
Rule 44    varList -> empty
Rule 45    varList -> varList COMMA var
Rule 46    var -> ID
Rule 47    var -> NUMBER_I
Rule 48    var -> NUMBER_F
Rule 49    var -> TRUE
Rule 50    var -> FALSE
Rule 51    conditionif -> expression relation expression
Rule 52    conditionif -> TRUE
Rule 53    conditionif -> FALSE
Rule 54    conditionif -> ID
Rule 55    inCaseLista -> inCasea
Rule 56    inCaseLista -> inCaseLista inCasea
Rule 57    inCasea -> CUANDO ID relation expression ET LBRACKET statementList RBRACKET
Rule 58    inCaseListb -> inCaseb
Rule 59    inCaseListb -> inCaseListb inCaseb
Rule 60    inCaseb -> CUANDO relation expression ET LBRACKET statementList RBRACKET
Rule 61    relation -> COMPARE
Rule 62    relation -> NE
Rule 63    relation -> LT
Rule 64    relation -> GT
Rule 65    relation -> LTE
Rule 66    relation -> GTE
Rule 67    expression -> term
Rule 68    expression -> addingOperator term
Rule 69    expression -> expression addingOperator term
Rule 70    addingOperator -> PLUS
Rule 71    addingOperator -> MINUS
Rule 72    term -> factor
Rule 73    term -> term multiplyingOperator factor
Rule 74    multiplyingOperator -> TIMES
Rule 75    multiplyingOperator -> DIVIDE
Rule 76    multiplyingOperator -> DIVIDE_E
Rule 77    factor -> factorM
Rule 78    factor -> factor MODULE factorM
Rule 79    factorM -> index
Rule 80    factorM -> factorM EXPONENT index
Rule 81    index -> empty NUMBER_I
Rule 82    index -> empty NUMBER_F
Rule 83    index -> addingOperator NUMBER_I
Rule 84    index -> addingOperator NUMBER_F
Rule 85    index -> addingOperator ID
Rule 86    index -> empty ID
Rule 87    index -> LPARENT expression RPARENT
Rule 88    empty -> <empty>

Terminals, with rules where they appear

A                    : 22 26 28 34 36
ABANICO              : 22 23
ASSIGN               : 
B                    : 23 27 28
COMMA                : 8 9 10 34 35 36 37 40 45
COMPARE              : 61
CUANDO               : 57 60
D                    : 24 29 31 35 37
DEF                  : 4 5
DIVIDE               : 75
DIVIDE_E             : 76
DOT                  : 19 20 21
EC                   : 17 18
ELSE                 : 14
ET                   : 57 60
EXEC                 : 11
EXPONENT             : 80
F                    : 21
FALSE                : 9 50 53
FEC                  : 17 18
FOR                  : 15 16
GOLPE                : 32
GT                   : 64
GTE                  : 66
I                    : 25 30 31
ID                   : 5 8 9 10 11 12 15 16 18 19 20 21 46 54 57 85 86
IF                   : 13 14
LBRACKET             : 4 5 13 14 14 15 16 17 18 57 60
LPARENT              : 4 5 11 12 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 87
LT                   : 63
LTE                  : 65
METRONOMO            : 34 35 36 37
MINUS                : 71
MODULE               : 78
NE                   : 62
NEG                  : 19
NUMBER_F             : 36 37 48 82 84
NUMBER_I             : 15 33 34 35 47 81 83
PERCUTOR             : 26 27 28 29 30 31
PLUS                 : 70
PRIN                 : 4
PRINT                : 38
RBRACKET             : 4 5 13 14 14 15 16 17 18 57 60
RPARENT              : 4 5 11 12 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 87
SEMICOLOM            : 8 9 10 11 12 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38
SET                  : 8 9 10 19 20 21
SN                   : 17 18
SPACE                : 
STEP                 : 15 16
STRING               : 42
T                    : 20
TIMES                : 74
TO                   : 15 16
TRUE                 : 8 49 52
TYPE                 : 12
VERTICAL             : 24 25
VIBRATO              : 33
error                : 

Nonterminals, with rules where they appear

addingOperator       : 68 69 83 84 85
conditionif          : 13 14
empty                : 3 3 13 16 26 27 29 30 44 81 82 86
expression           : 10 15 16 41 51 51 57 60 69 87
factor               : 72 73 78
factorM              : 77 78 80
functionDecl         : 2
inCaseLista          : 17 56
inCaseListb          : 18 59
inCasea              : 55 56
inCaseb              : 58 59
index                : 79 80
multiplyingOperator  : 73
prinDecl             : 1
printText            : 39 40
printTextList        : 38 40
program              : 1 2 0
relation             : 51 57 60
statement            : 6 7
statementList        : 4 5 7 13 14 14 15 16 17 18 57 60
term                 : 67 68 69 73
var                  : 43 45
varList              : 5 11 45

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . prinDecl program
    (2) program -> . functionDecl program
    (3) program -> . empty empty
    (4) prinDecl -> . DEF PRIN LPARENT RPARENT LBRACKET statementList RBRACKET
    (5) functionDecl -> . DEF ID LPARENT varList RPARENT LBRACKET statementList RBRACKET
    (88) empty -> .

    DEF             shift and go to state 5
    $end            reduce using rule 88 (empty -> .)

    program                        shift and go to state 1
    prinDecl                       shift and go to state 2
    functionDecl                   shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> prinDecl . program
    (1) program -> . prinDecl program
    (2) program -> . functionDecl program
    (3) program -> . empty empty
    (4) prinDecl -> . DEF PRIN LPARENT RPARENT LBRACKET statementList RBRACKET
    (5) functionDecl -> . DEF ID LPARENT varList RPARENT LBRACKET statementList RBRACKET
    (88) empty -> .

    DEF             shift and go to state 5
    $end            reduce using rule 88 (empty -> .)

    prinDecl                       shift and go to state 2
    program                        shift and go to state 6
    functionDecl                   shift and go to state 3
    empty                          shift and go to state 4

state 3

    (2) program -> functionDecl . program
    (1) program -> . prinDecl program
    (2) program -> . functionDecl program
    (3) program -> . empty empty
    (4) prinDecl -> . DEF PRIN LPARENT RPARENT LBRACKET statementList RBRACKET
    (5) functionDecl -> . DEF ID LPARENT varList RPARENT LBRACKET statementList RBRACKET
    (88) empty -> .

    DEF             shift and go to state 5
    $end            reduce using rule 88 (empty -> .)

    functionDecl                   shift and go to state 3
    program                        shift and go to state 7
    prinDecl                       shift and go to state 2
    empty                          shift and go to state 4

state 4

    (3) program -> empty . empty
    (88) empty -> .

    $end            reduce using rule 88 (empty -> .)

    empty                          shift and go to state 8

state 5

    (4) prinDecl -> DEF . PRIN LPARENT RPARENT LBRACKET statementList RBRACKET
    (5) functionDecl -> DEF . ID LPARENT varList RPARENT LBRACKET statementList RBRACKET

    PRIN            shift and go to state 9
    ID              shift and go to state 10


state 6

    (1) program -> prinDecl program .

    $end            reduce using rule 1 (program -> prinDecl program .)


state 7

    (2) program -> functionDecl program .

    $end            reduce using rule 2 (program -> functionDecl program .)


state 8

    (3) program -> empty empty .

    $end            reduce using rule 3 (program -> empty empty .)


state 9

    (4) prinDecl -> DEF PRIN . LPARENT RPARENT LBRACKET statementList RBRACKET

    LPARENT         shift and go to state 11


state 10

    (5) functionDecl -> DEF ID . LPARENT varList RPARENT LBRACKET statementList RBRACKET

    LPARENT         shift and go to state 12


state 11

    (4) prinDecl -> DEF PRIN LPARENT . RPARENT LBRACKET statementList RBRACKET

    RPARENT         shift and go to state 13


state 12

    (5) functionDecl -> DEF ID LPARENT . varList RPARENT LBRACKET statementList RBRACKET
    (43) varList -> . var
    (44) varList -> . empty
    (45) varList -> . varList COMMA var
    (46) var -> . ID
    (47) var -> . NUMBER_I
    (48) var -> . NUMBER_F
    (49) var -> . TRUE
    (50) var -> . FALSE
    (88) empty -> .

    ID              shift and go to state 14
    NUMBER_I        shift and go to state 18
    NUMBER_F        shift and go to state 19
    TRUE            shift and go to state 20
    FALSE           shift and go to state 21
    RPARENT         reduce using rule 88 (empty -> .)
    COMMA           reduce using rule 88 (empty -> .)

    varList                        shift and go to state 15
    var                            shift and go to state 16
    empty                          shift and go to state 17

state 13

    (4) prinDecl -> DEF PRIN LPARENT RPARENT . LBRACKET statementList RBRACKET

    LBRACKET        shift and go to state 22


state 14

    (46) var -> ID .

    RPARENT         reduce using rule 46 (var -> ID .)
    COMMA           reduce using rule 46 (var -> ID .)


state 15

    (5) functionDecl -> DEF ID LPARENT varList . RPARENT LBRACKET statementList RBRACKET
    (45) varList -> varList . COMMA var

    RPARENT         shift and go to state 23
    COMMA           shift and go to state 24


state 16

    (43) varList -> var .

    RPARENT         reduce using rule 43 (varList -> var .)
    COMMA           reduce using rule 43 (varList -> var .)


state 17

    (44) varList -> empty .

    RPARENT         reduce using rule 44 (varList -> empty .)
    COMMA           reduce using rule 44 (varList -> empty .)


state 18

    (47) var -> NUMBER_I .

    RPARENT         reduce using rule 47 (var -> NUMBER_I .)
    COMMA           reduce using rule 47 (var -> NUMBER_I .)


state 19

    (48) var -> NUMBER_F .

    RPARENT         reduce using rule 48 (var -> NUMBER_F .)
    COMMA           reduce using rule 48 (var -> NUMBER_F .)


state 20

    (49) var -> TRUE .

    RPARENT         reduce using rule 49 (var -> TRUE .)
    COMMA           reduce using rule 49 (var -> TRUE .)


state 21

    (50) var -> FALSE .

    RPARENT         reduce using rule 50 (var -> FALSE .)
    COMMA           reduce using rule 50 (var -> FALSE .)


state 22

    (4) prinDecl -> DEF PRIN LPARENT RPARENT LBRACKET . statementList RBRACKET
    (6) statementList -> . statement
    (7) statementList -> . statementList statement
    (8) statement -> . SET ID COMMA TRUE SEMICOLOM
    (9) statement -> . SET ID COMMA FALSE SEMICOLOM
    (10) statement -> . SET ID COMMA expression SEMICOLOM
    (11) statement -> . EXEC ID LPARENT varList RPARENT SEMICOLOM
    (12) statement -> . TYPE LPARENT ID RPARENT SEMICOLOM
    (13) statement -> . IF conditionif LBRACKET statementList RBRACKET empty
    (14) statement -> . IF conditionif LBRACKET statementList RBRACKET ELSE LBRACKET statementList RBRACKET
    (15) statement -> . FOR ID TO expression STEP NUMBER_I LBRACKET statementList RBRACKET
    (16) statement -> . FOR ID TO expression STEP empty LBRACKET statementList RBRACKET
    (17) statement -> . EC inCaseLista SN LBRACKET statementList RBRACKET FEC SEMICOLOM
    (18) statement -> . EC ID inCaseListb SN LBRACKET statementList RBRACKET FEC SEMICOLOM
    (19) statement -> . SET ID DOT NEG SEMICOLOM
    (20) statement -> . SET ID DOT T SEMICOLOM
    (21) statement -> . SET ID DOT F SEMICOLOM
    (22) statement -> . ABANICO LPARENT A RPARENT SEMICOLOM
    (23) statement -> . ABANICO LPARENT B RPARENT SEMICOLOM
    (24) statement -> . VERTICAL LPARENT D RPARENT SEMICOLOM
    (25) statement -> . VERTICAL LPARENT I RPARENT SEMICOLOM
    (26) statement -> . PERCUTOR LPARENT A empty RPARENT SEMICOLOM
    (27) statement -> . PERCUTOR LPARENT B empty RPARENT SEMICOLOM
    (28) statement -> . PERCUTOR LPARENT A B RPARENT SEMICOLOM
    (29) statement -> . PERCUTOR LPARENT D empty RPARENT SEMICOLOM
    (30) statement -> . PERCUTOR LPARENT I empty RPARENT SEMICOLOM
    (31) statement -> . PERCUTOR LPARENT D I RPARENT SEMICOLOM
    (32) statement -> . GOLPE LPARENT RPARENT SEMICOLOM
    (33) statement -> . VIBRATO LPARENT NUMBER_I RPARENT SEMICOLOM
    (34) statement -> . METRONOMO LPARENT A COMMA NUMBER_I RPARENT SEMICOLOM
    (35) statement -> . METRONOMO LPARENT D COMMA NUMBER_I RPARENT SEMICOLOM
    (36) statement -> . METRONOMO LPARENT A COMMA NUMBER_F RPARENT SEMICOLOM
    (37) statement -> . METRONOMO LPARENT D COMMA NUMBER_F RPARENT SEMICOLOM
    (38) statement -> . PRINT LPARENT printTextList RPARENT SEMICOLOM

    SET             shift and go to state 27
    EXEC            shift and go to state 28
    TYPE            shift and go to state 29
    IF              shift and go to state 30
    FOR             shift and go to state 31
    EC              shift and go to state 32
    ABANICO         shift and go to state 33
    VERTICAL        shift and go to state 34
    PERCUTOR        shift and go to state 35
    GOLPE           shift and go to state 36
    VIBRATO         shift and go to state 37
    METRONOMO       shift and go to state 38
    PRINT           shift and go to state 39

    statementList                  shift and go to state 25
    statement                      shift and go to state 26

state 23

    (5) functionDecl -> DEF ID LPARENT varList RPARENT . LBRACKET statementList RBRACKET

    LBRACKET        shift and go to state 40


state 24

    (45) varList -> varList COMMA . var
    (46) var -> . ID
    (47) var -> . NUMBER_I
    (48) var -> . NUMBER_F
    (49) var -> . TRUE
    (50) var -> . FALSE

    ID              shift and go to state 14
    NUMBER_I        shift and go to state 18
    NUMBER_F        shift and go to state 19
    TRUE            shift and go to state 20
    FALSE           shift and go to state 21

    var                            shift and go to state 41

state 25

    (4) prinDecl -> DEF PRIN LPARENT RPARENT LBRACKET statementList . RBRACKET
    (7) statementList -> statementList . statement
    (8) statement -> . SET ID COMMA TRUE SEMICOLOM
    (9) statement -> . SET ID COMMA FALSE SEMICOLOM
    (10) statement -> . SET ID COMMA expression SEMICOLOM
    (11) statement -> . EXEC ID LPARENT varList RPARENT SEMICOLOM
    (12) statement -> . TYPE LPARENT ID RPARENT SEMICOLOM
    (13) statement -> . IF conditionif LBRACKET statementList RBRACKET empty
    (14) statement -> . IF conditionif LBRACKET statementList RBRACKET ELSE LBRACKET statementList RBRACKET
    (15) statement -> . FOR ID TO expression STEP NUMBER_I LBRACKET statementList RBRACKET
    (16) statement -> . FOR ID TO expression STEP empty LBRACKET statementList RBRACKET
    (17) statement -> . EC inCaseLista SN LBRACKET statementList RBRACKET FEC SEMICOLOM
    (18) statement -> . EC ID inCaseListb SN LBRACKET statementList RBRACKET FEC SEMICOLOM
    (19) statement -> . SET ID DOT NEG SEMICOLOM
    (20) statement -> . SET ID DOT T SEMICOLOM
    (21) statement -> . SET ID DOT F SEMICOLOM
    (22) statement -> . ABANICO LPARENT A RPARENT SEMICOLOM
    (23) statement -> . ABANICO LPARENT B RPARENT SEMICOLOM
    (24) statement -> . VERTICAL LPARENT D RPARENT SEMICOLOM
    (25) statement -> . VERTICAL LPARENT I RPARENT SEMICOLOM
    (26) statement -> . PERCUTOR LPARENT A empty RPARENT SEMICOLOM
    (27) statement -> . PERCUTOR LPARENT B empty RPARENT SEMICOLOM
    (28) statement -> . PERCUTOR LPARENT A B RPARENT SEMICOLOM
    (29) statement -> . PERCUTOR LPARENT D empty RPARENT SEMICOLOM
    (30) statement -> . PERCUTOR LPARENT I empty RPARENT SEMICOLOM
    (31) statement -> . PERCUTOR LPARENT D I RPARENT SEMICOLOM
    (32) statement -> . GOLPE LPARENT RPARENT SEMICOLOM
    (33) statement -> . VIBRATO LPARENT NUMBER_I RPARENT SEMICOLOM
    (34) statement -> . METRONOMO LPARENT A COMMA NUMBER_I RPARENT SEMICOLOM
    (35) statement -> . METRONOMO LPARENT D COMMA NUMBER_I RPARENT SEMICOLOM
    (36) statement -> . METRONOMO LPARENT A COMMA NUMBER_F RPARENT SEMICOLOM
    (37) statement -> . METRONOMO LPARENT D COMMA NUMBER_F RPARENT SEMICOLOM
    (38) statement -> . PRINT LPARENT printTextList RPARENT SEMICOLOM

    RBRACKET        shift and go to state 42
    SET             shift and go to state 27
    EXEC            shift and go to state 28
    TYPE            shift and go to state 29
    IF              shift and go to state 30
    FOR             shift and go to state 31
    EC              shift and go to state 32
    ABANICO         shift and go to state 33
    VERTICAL        shift and go to state 34
    PERCUTOR        shift and go to state 35
    GOLPE           shift and go to state 36
    VIBRATO         shift and go to state 37
    METRONOMO       shift and go to state 38
    PRINT           shift and go to state 39

    statement                      shift and go to state 43

state 26

    (6) statementList -> statement .
